<resources>
    <string name="app_name">SqliteDemo Application</string>
    <string name="update_record">Update Record</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="edit">edit</string>
    <string name="trash">trash</string>
    <string name="all_inserted_records">All inserted records:</string>
    <string name="add">Add</string>
</resources>